--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/Users/ianrosenthal/sandbox/stu-mini-project/styles.css">
     <title>MASTERFULMARKETERS</title>
 </head>
 
 <body>
-<header>
+    <header>
     <h1> MASTERFUL MARKETERS </h1>
-</header>
+    </header>
+<main>
+    <h2> Meet our Marketers!!!</h2>
+<section>
+    <div class="section">
+    <img src="/Users/ianrosenthal/sandbox/stu-mini-project/marketer.jpeg" alt="happy marketer" />
+    </div>
+</section>
 
+    <p1> Our marketers are extremely trustowrthy. </p1>
+
+
+
+</main>
 </body>
 </html>
